--- a/indexjs.html
+++ b/indexjs.html
@@ -17,7 +17,7 @@
 					<i class="fa-solid fa-square-plus"></i>
 				</button>
 			</form>
-			<div class="container">
+			<div class="div">
 				<ul></ul>
 			</div>
 		<script src="index.js"></script>
